create_user and logout implemented
