# mib/views/auth.py
@@ -18,6 +18,10 @@ REQUESTS_TIMEOUT_SECONDS = 60
 USERS_ENDPOINT = app.config['USERS_MS_URL']
 
 
+def send_logout_request():
+    pass
+
+
 # This is the route to do the login, in the login.html page there is a form and the information
 # that are put in the form are cheked in the db and the is_active flag in the db is put equal to True
 @auth.route('/login/', methods=['GET', 'POST'])
@@ -35,12 +39,15 @@ def login():
             print('received response....')
             json_response = response.json()
             print(json_response)
-            status = 201
+
+            status = response.status_code
+
             if status == 200:
                 user = User.build_from_json(json_response['user'])
                 login_user(user)
                 return render_template("mailbox.html")
-            elif status == 201:
+            elif status == 201 or "not a 'email'" in json_response["detail"]:
+                print("Invalid credential")
                 flash("Invalid credential")
                 return render_template('login.html', form=form)
             else:
@@ -50,39 +57,12 @@ def login():
             return "HTTP timeout"
     return render_template('login.html', form=form)
 
-    # if not (current_user is not None and hasattr(current_user, 'id')):
-    #     form = LoginForm()
-    #     email, password = form.data['email'], form.data['password']
-    #     payload = dict(email=email, password=password)
-    #     try:
-    #         print('trying response....')
-    #         response = requests.post('%s/authenticate' % USERS_ENDPOINT,
-    #                                  json=payload,
-    #                                  timeout=REQUESTS_TIMEOUT_SECONDS
-    #                                  )
-    #         print('received response....')
-    #         json_response = response.json()
-    #         status= 201
-    #         if status == 200:
-    #             user = User.build_from_json(json_response['user'])
-    #             login_user(user)
-    #         elif status == 201:
-    #             flash("Invalid credential")
-    #             return render_template('login.html',form=form)
-    #         else:
-    #             return "You are already logged"
-    #     except Exception as e:
-    #         print(e)
-    #         return "HTTP timeout"
-    # else:
-    #     return "You are currently logged in, you have to <a href=/logout>logout</a> first", DOUBLE_LOGIN
 
 @auth.route('/logout')
 @login_required
 def logout():
-    """This method allows the users to log out of the system
-        Returns:
-            Redirects the view to the home page
-    """
-    logout_user()
-    return redirect(url_for('home.index'))
+    if current_user is not None and hasattr(current_user, 'id'):
+        send_logout_request()
+        logout_user()
+
+    return redirect('/')
